--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,19 @@
 html {
   box-sizing: border-box;
-  font-family: "Open-Sans", sans-serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+}
+
 .img-flex {
+  display: block;
   width: 100%;
 }
 
@@ -18,22 +24,30 @@ html {
 }
 
 .content {
+  width: 100%;
   position: absolute;
-  z-index: 1000;
   max-width: 50em;
-  bottom: 10px;
+  bottom: 1.5em;
   left: 50%;
   transform: translateX(-50%);
+  padding: 0 1.5em;
 }
 
 h2 {
+  margin: 0;
+  margin-bottom: 1rem;
+  line-height: 1.4;
   font-size: 4rem;
   font-weight: bold;
   color: #fff;
-  background-color: rgba(0,0,0,.5);
+}
+
+span {
+  background-color: rgba(0, 0, 0, .5);
 }
 
 p {
+  margin: 0;
   font-size: 2rem;
   color: #000;
   font-style: italic;
