--- a/css/main.css
+++ b/css/main.css
@@ -27,10 +27,10 @@ body {
   width: 100%;
   position: absolute;
   max-width: 50em;
-  bottom: 1.5em;
+  bottom: 1.5rem;
   left: 50%;
   transform: translateX(-50%);
-  padding: 0 1.5em;
+  padding: 0 1.5rem;
 }
 
 h2 {
@@ -49,6 +49,5 @@ span {
 p {
   margin: 0;
   font-size: 2rem;
-  color: #000;
   font-style: italic;
 }
